Fix window jolt with scrollbar

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -333,6 +333,10 @@ button {
  *
  */
 
+#mainContainer {
+	position: relative;
+}
+
 #breakpointMessage {
 	display: none;
 }
@@ -348,8 +352,9 @@ button {
 	position: absolute;
 	top: 0;
 	left: 0;
-	height: 100vh;
-	width: 100vw;
+	right: 0;
+	bottom: 0;
+	min-height: 100vh;
 
 	background-attachment: fixed;
 	background-repeat: no-repeat;
